# DESSAUX_Damien_ECF1

./: README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
analyses/: analyses.py
config/: __init__.py  settings.py
correction_complete/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
correction_complete/docs/: DAT.md  RGPD_CONFORMITE.md
correction_complete/init/: mongo-init.js  postgres-init.sql
correction_complete/sql/: analyses.sql
correction_complete/src/api/: __init__.py  geocoding_client.py
correction_complete/src/importers/: __init__.py  excel_importer.py
correction_complete/src/pipeline/: __init__.py  etl_pipeline.py
correction_complete/src/scrapers/: __init__.py  books_scraper.py  quotes_scraper.py
docs/: DAT.md  MLD_librairies.loo  RGPD_CONFORMITE.md
docs/MLD/: MLD_books.loo  MLD_librairies.loo  MLD_quotes.loo
postgresql_initdb/: 01_tables_quotes.sql  02_tables_librairies.sql  03_tables_books.sql
sql/: analyses.sql
src/: __init__.py
src/extractors/: __init__.py  api_adress_extractor.py  books_scrapper.py  excel_extractor.py  quotes_scrapper.py
src/pipelines/: __init__.py  books_pipeline.py  partenaire_librairies_pipeline.py  quotes_pipeline.py
src/storage/: __init__.py  minio_storage.py  postgresql_storage.py
src/utils/: __init__.py  logger.py
